# BackForge

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.dev  dev.ps1  docker-compose.yml  railway.toml  start-dev.sh  start-services.sh
apps/builder/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/builder/src/: App.tsx  main.tsx
apps/builder/src/store/: builderStore.test.ts  builderStore.ts  index.ts  projectApiStore.ts  utils.ts
apps/builder/src/types/: index.ts  schema.ts
crates/backforge-audit/: Cargo.toml
crates/backforge-audit/src/: entry.rs  error.rs  lib.rs  log.rs
crates/backforge-audit/tests/: integration.rs
crates/backforge-cli/: Cargo.toml
crates/backforge-cli/src/: main.rs
crates/backforge-cli/src/commands/: ci.rs  deploy.rs  generate.rs  metrics.rs  migrate.rs  mod.rs  plugin.rs  project.rs  security.rs  storage.rs  sync.rs  versions.rs
crates/backforge-core/: Cargo.toml
crates/backforge-core/src/: error.rs  lib.rs  manager.rs
crates/backforge-core/src/project/: mod.rs  permissions.rs  schema.rs  state.rs
crates/backforge-core/tests/: integration.rs
crates/backforge-db/: Cargo.toml
crates/backforge-db/src/: cache.rs  error.rs  lib.rs  pool.rs
crates/backforge-migrations/: Cargo.toml
crates/backforge-migrations/src/: diff.rs  error.rs  generator.rs  lib.rs  runner.rs
crates/backforge-storage/: Cargo.toml
crates/backforge-storage/src/: bucket.rs  engine.rs  error.rs  hash.rs  lib.rs  object.rs
crates/backforge-sync/: Cargo.toml
crates/backforge-sync/src/: clock.rs  engine.rs  error.rs  lib.rs  log.rs  snapshot.rs
crates/backforge-versions/: Cargo.toml
crates/backforge-versions/src/: diff.rs  error.rs  lib.rs  snapshot.rs  store.rs
crates/backforge-versions/tests/: integration.rs
functions/proxy/gateway/: [[path]].ts
services/api-gateway/: Dockerfile  go.mod  go.sum  main.go
services/api-gateway/internal/config/: config.go
services/api-gateway/internal/handlers/: auth.go  codegen_proxy.go  deploy_proxy.go  health.go  health_test.go  helpers.go  metrics_proxy.go  migrate.go  projects.go  storage.go  storage_test.go  sync_proxy.go
services/api-gateway/internal/middleware/: auth.go  auth_test.go  cors.go  metrics.go  ratelimit.go
services/api-gateway/internal/routes/: router.go
services/code-generator/: go.mod  main.go
services/code-generator/internal/config/: config.go
services/code-generator/internal/generators/: handlers.go  handlers_test.go  oauth.go  openapi.go  openapi_test.go  queries.go  queries_test.go  sql.go  sql_test.go
services/code-generator/internal/handlers/: generate.go  generate_test.go  validate.go
services/code-generator/internal/routes/: router.go
services/code-generator/internal/schema/: schema.go
services/code-generator/internal/validators/: go_syntax.go  openapi.go  report.go  runner.go  sql.go  validators_test.go
services/deployment/: go.mod  main.go
services/deployment/internal/config/: config.go
services/deployment/internal/deploy/: cloud.go  cloud_test.go  deployer.go  edge.go  edge_test.go  local.go  local_test.go
services/deployment/internal/handlers/: deploy.go  deploy_test.go
services/deployment/internal/routes/: router.go
services/deployment/internal/state/: project.go
services/deployment/internal/store/: store.go  store_test.go
services/deployment/internal/template/: generator.go  generator_test.go
services/frontend-analyzer/: pyproject.toml
services/frontend-analyzer/src/: analyzer.py  config.py  main.py  models.py  ollama_client.py  plugin_registry.py  static_analyzer.py
services/frontend-analyzer/src/backforge_frontend_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/frontend-analyzer/src/plugins/: __init__.py  base.py  flutter.py  phaser.py  react_native.py  unity.py
services/frontend-analyzer/tests/: test_api.py  test_ollama_client.py  test_plugins.py  test_static_analyzer.py
services/metrics/: go.mod  main.go
services/metrics/internal/config/: config.go
services/metrics/internal/handlers/: metrics.go  metrics_test.go
services/metrics/internal/routes/: router.go
services/metrics/internal/store/: store.go  store_test.go
services/sync-server/: go.mod  main.go
services/sync-server/internal/config/: config.go
services/sync-server/internal/handlers/: sync.go  sync_test.go
services/sync-server/internal/routes/: router.go
services/sync-server/internal/store/: store.go  store_test.go
site/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
site/functions/proxy/gateway/: [[path]].js
site/public/: _redirects  _worker.js
site/src/: App.tsx  app.css  main.tsx
site/src/components/: LanguageSwitcher.tsx
site/src/components/auth/: ProtectedRoute.tsx
site/src/components/builder/: AIPanel.tsx  Canvas.tsx  EntityPalette.tsx  Inspector.tsx
site/src/components/dashboard/: ActivityFeed.tsx  QuickActions.tsx  StatsGrid.tsx
site/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
site/src/components/metrics/: CircularMetric.tsx  LogTable.tsx  PerformanceCharts.tsx
site/src/i18n/: index.ts
site/src/lib/: api.ts  types.ts
site/src/pages/: BuilderPage.tsx  DashboardPage.tsx  DeployPage.tsx  GithubCallbackPage.tsx  LandingPage.tsx  LoginPage.tsx  MetricsPage.tsx  RegisterPage.tsx  SettingsPage.tsx
site/src/stores/: appStore.ts  authStore.ts
(+16 files in other folders)
