[workspace]
members = [
    "crates/backforge-core",
    "crates/backforge-db",
    "crates/backforge-cli",
    "crates/backforge-migrations",
    "crates/backforge-storage",
    "crates/backforge-sync",
    "crates/backforge-versions",
    "crates/backforge-audit",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1"
tokio-util = { version = "0.7", features = ["io", "codec"] }
