[package]
name = "backforge-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
backforge-core = { path = "../backforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
