[package]
name = "backforge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backforge"
path = "src/main.rs"

[dependencies]
backforge-core = { path = "../backforge-core" }
backforge-storage = { path = "../backforge-storage" }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
clap = { version = "4", features = ["derive"] }
