[package]
name = "backforge-migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
backforge-core = { path = "../backforge-core" }
backforge-db = { path = "../backforge-db" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
