[package]
name = "backforge-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
backforge-core = { path = "../backforge-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
