[package]
name = "backforge-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
backforge-core = { path = "../backforge-core" }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tokio    = { workspace = true }
