[package]
name = "backforge-versions"
version = "0.1.0"
edition = "2021"

[dependencies]
backforge-core = { path = "../backforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
